# cone.fileupload

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  Makefile  README.rst  bootstrap.sh  constraints.txt  i18n.sh  i18n_extract.sh  mx.ini  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml  test_js.yml
js/: rollup.conf.js  wtr.config.mjs
js/src/: bundle.js  fileupload.js
js/tests/: test_fileupload.js
scripts/: clean.sh  coverage.sh  install.sh  tests.sh
src/cone/fileupload/: __init__.py  configure.zcml  tests.py
src/cone/fileupload/browser/: __init__.py  actions.py  fileupload.pt  fileupload.py  fileupload.rst  fileupload_toolbar.pt  templates.py  toolbar.pt
src/cone/fileupload/browser/static/: fileupload.css  fileupload.js  fileupload.min.js
src/cone/fileupload/browser/static/fileupload/: cone.fileupload.css  cone.fileupload.js  cone.fileupload.min.js
src/cone/fileupload/browser/static/jquery-fileupload/: jquery.fileupload-process.js  jquery.fileupload-ui.js  jquery.fileupload-validate.js
src/cone/fileupload/browser/static/js/: cone.fileupload.js
src/cone/fileupload/locale/: cone.fileupload.pot
src/cone/fileupload/locale/de/LC_MESSAGES/: cone.fileupload.mo  cone.fileupload.po
src/cone/fileupload/locale/en/LC_MESSAGES/: cone.fileupload.mo  cone.fileupload.po
src/cone/fileupload/tests/: test_fileupload.py  test_package.py
