[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.fileupload"
version = "1.1.1.dev0"
description = "jQuery File Upload integration for cone.app"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "cone.app>1.0.99,<2.0.0",
]

[project.optional-dependencies]
test = [
    "cone.app[test]",
    "pytest",
    "zope.pytestlayer",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.fileuplaod"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/.gitignore",
    "/js/",
    "/Makefile",
    "/mx.ini",
    "/package.json",
    "/pnpm-lock.yaml",
    "/scripts/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
